<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hintAmount">Enter Amount</string>
    <string name="bt10Pct">10%</string>
    <string name="bt15pct">15%</string>
    <string name="bt20pct">20%</string>
    <string name="tvTip">&quot;Tip :  &quot;</string>
    <string name="etTipAmt"></string>
    <string name="tvTotal">&quot;Total : &quot;</string>
    <string name="btnClr">x</string>
    <string name="btnClearDesc">Button to clear amount field</string>

</resources>
