<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalc" >

    <Button
        android:id="@+id/bt20pct"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt15pct"
        android:layout_alignBottom="@+id/bt15pct"
        android:layout_alignRight="@+id/etAmount"
        android:onClick="calc20Pct"
        android:text="@string/bt20pct"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/bt15pct"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt10pct"
        android:layout_alignBottom="@+id/bt10pct"
        android:layout_centerHorizontal="true"
        android:onClick="calc15Pct"
        android:text="@string/bt15pct"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etTipAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipLbl"
        android:layout_alignBottom="@+id/tvTipLbl"
        android:layout_alignRight="@+id/etAmount"
        android:layout_toRightOf="@+id/tvTipLbl"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical|right"
        android:inputType="numberDecimal"
        android:longClickable="false"
        android:text="@string/etTipAmt"
        android:typeface="normal" />

    <Button
        android:id="@+id/bt10pct"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="68dp"
        android:onClick="calc10Pct"
        android:text="@string/bt10Pct"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etTipAmt"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvTotal"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical|right"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="center_vertical|right"
        android:hint="@string/hintAmount"
        android:inputType="numberDecimal"
        android:maxLength="@integer/maxLen"
        android:maxLines="@integer/maxLine" />

    <TextView
        android:id="@+id/tvTipLbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bt10pct"
        android:layout_below="@+id/etAmount"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:gravity="right"
        android:longClickable="false"
        android:text="@string/tvTip"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTipLbl"
        android:layout_centerVertical="true"
        android:clickable="false"
        android:focusable="false"
        android:gravity="right"
        android:longClickable="false"
        android:text="@string/tvTotal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btClr"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTipLbl"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/etAmount"
        android:layout_toRightOf="@+id/etAmount"
        android:onClick="onClr"
        android:text="@string/btnClr" />

</RelativeLayout>
